# Feature - library updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-typescript-supabase-tailwind-starter",
+  "name": "relay.clud",
   "version": "0.1.0",
   "private": true,
   "scripts": {
