--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/testing-library__jest-dom": "^6.0.0",
     "autoprefixer": "^10.4.8",
+    "dotenv": "^16.3.1",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "jest": "^29.7.0",
