--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
+    //"jsx": "preserve",
+    "jsx": "react",
     "incremental": true,
     "baseUrl": "./",
     "plugins": [
